# grading_rubric

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/grading-rubric/: Dockerfile
docs/: design.md  requirements.md  ui-draft.md  verification-plan.md
example_output/: assess_outputs.json  explained_rubric.json  ingest_outputs.json  parsed_inputs.json  propose_outputs.json  score_outputs.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx  vite-env.d.ts
grading_rubric/: __init__.py
grading_rubric/assess/: __init__.py  engines.py  llm_schemas.py  models.py  simulation.py  stage.py
grading_rubric/audit/: __init__.py  emitter.py  hashing.py
grading_rubric/cli/: __init__.py  main.py
grading_rubric/config/: __init__.py  settings.py
grading_rubric/gateway/: __init__.py  backends.py  gateway.py  prompts.py
grading_rubric/improve/: __init__.py  llm_schemas.py  models.py  stage.py
grading_rubric/models/: __init__.py  audit.py  deliverable.py  explanation.py  findings.py  proposed_change.py  rubric.py  types.py
grading_rubric/orchestrator/: __init__.py  pipeline.py  stage.py
grading_rubric/output/: __init__.py  render_stage.py
grading_rubric/parsers/: __init__.py  file_io.py  ingest_stage.py  llm_schemas.py  models.py  ocr.py  (+2 more)
project_materials/: README.md
tests/: conftest.py
validance/: harvester.py  register.py  workflow.py
validance_integration/: __init__.py  proposals.py  register.py  workflow.py
(+45 files in other folders)
